<resources>
    <string name="app_name">Device information</string>
    <string name="device_information">Device Information</string>
    <string name="sensors">sensors</string>
    <string name="camera">camera</string>
    <string name="memory">Memory</string>
    <string name="network">Network</string>
    <string name="batter">Batter</string>
    <string name="cpu">CPU</string>
    <string name="system">system</string>
    <string name="device">Device</string>
    <string name="see_everything_that_company_hide_it_from_you">See Everything that company hide it from you</string>
    <string name="name_phone">Device : </string>
    <string name="Serial_Number">Serial Number : </string>
    <string name="PRODUCT">Product : </string>
    <string name="BRAND">Brand : </string>
    <string name="DISPLAY">Display : </string>
    <string name="FINGERPRINT">Fingerprint : </string>
    <string name="MANUFACTURER">Manufacturer : </string>
    <string name="MODEL">Model : </string>
    <string name="TYPE">Type : </string>
    <string name="USER">User : </string>
    <string name="UNKNOWN">Unknown : </string>
    <string name="RADIO">Radio : </string>
    <string name="BASE_OS">Base_on : </string>
    <string name="CODENAME">Code name : </string>
    <string name="INCREMENTAL">Incremental : </string>
    <string name="RELEASE">Release : </string>
    <string name="RELEASE_OR_CODENAME">Release or code name : </string>
    <string name="SECURITY_PATCH">Security patch : </string>
    <string name="SDK">SDK : </string>
    <string name="SDK_INT">SDK int : </string>
    <string name="PREVIEW_SDK_INT">Preview SDK int : </string>
    <string name="BOARD">Board : </string>
    <string name="BOOTLOADER">Bootloader : </string>
    <string name="HARDWARE">Hardware : </string>
    <string name="HOST">Host : </string>
    <string name="ID">ID : </string>
    <string name="TAGS">TAGS : </string>
    <string name="SUPPORTED_32_BIT_ABIS">Supported 32 Bit ABIS : </string>
    <string name="SUPPORTED_64_BIT_ABIS">Supported 64 Bit ABIS : </string>
    <string name="TIME">TIme : </string>
    <string name="SUPPORTED_ABIS">SUpported ABIS : </string>
    <string name="CPU_ABI">CPU_ABI : </string>
    <string name="CPU_ABI2">CPU_ABI2 :</string>
    <string name="aboutus">About Us</string>
    <string name="IfyouneedhelpContactwithus">If you need help? Contact with us</string>
    <string name="OtherOurProdcuts">Other Our Prodcuts! Click me</string>
    <string name="thisbeta">Note: This product it just as a Beta Product, so thank you for downloading our product</string>
</resources>