<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorforbackground"
        tools:context=".Deviceinformation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >


            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/splashscreenimage" />

            <TextView
                android:id="@+id/txtnameofapp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/colorfortitlesplashscreen"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/app_name" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/colorfortitle"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/IfyouneedhelpContactwithus" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                >

                <ImageView
                    android:id="@+id/img_facebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/icon_awesome_facebook_f" />

                <ImageView
                    android:id="@+id/img_snap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/icon_awesome_snapchat_ghost" />

                <ImageView
                    android:id="@+id/img_whats"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/icon_awesome_whatsapp" />

                <ImageView
                    android:id="@+id/img_twitter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/icon_awesome_twitter" />

                <ImageView
                    android:id="@+id/img_insta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/icon_awesome_instagram" />
            </LinearLayout>

            <TextView
                android:id="@+id/txtclickme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/colorfortitle"
                android:textSize="30sp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/OtherOurProdcuts" />



        </LinearLayout>
    </ScrollView>
</layout>